{
    "name": "InputManager",
    "maps": [
        {
            "name": "Turn",
            "id": "f1f34dc9-ec0e-4e73-92d8-5d14e1d57d99",
            "actions": [
                {
                    "name": "SingleClick",
                    "type": "Button",
                    "id": "4d280e68-0da7-4806-a46f-25c753814b0c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Tap(duration=0.1,pressPoint=0.01)"
                },
                {
                    "name": "EndUnitSelection",
                    "type": "Button",
                    "id": "92af4035-58b7-40c4-aa69-a666be1a1931",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "SlowTap(duration=0.10001,pressPoint=0.01)"
                },
                {
                    "name": "StartUnitSelection",
                    "type": "Button",
                    "id": "68528ca4-465b-4748-8034-3f6abfe91ba6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Hold(duration=0.10001,pressPoint=0.01)"
                },
                {
                    "name": "RightClick",
                    "type": "Button",
                    "id": "d5a4525d-c027-4027-a793-d2664e892a67",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "a7e20da9-8291-4f66-a180-42f097d9e92c",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SingleClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ff9add4a-46f5-4c33-a8a2-61c0785713e9",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SingleClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "78d415bb-0e36-44eb-845a-775e6fae281d",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "EndUnitSelection",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "60a2d1b5-901d-4a00-85b0-5f1de54f3967",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "StartUnitSelection",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e7233102-fce5-40f4-85f1-3208ef3fd3c4",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}